adding html tags

--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+  <title>GTea</title>
+  <link rel="stylesheet" href="style.css">
 <body>
     <div class="sidebar">
       <!-- add content for the sidebar here -->
@@ -6,4 +10,4 @@
       <!-- add content for the main content area here -->
     </div>
   </body>
-  
+  </html>
