--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,7 @@
 <head>
   <title>GTea</title>
   <link rel="stylesheet" href="style.css">
+  </head>   
 <body>
     <div class="sidebar">
       <!-- add content for the sidebar here -->
