--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>GTea</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index2.css">
   </head>   
 <body>
     <div class="sidebar">
