adding graph generators

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 <script src="js/server.js"></script>
 <script src="js/cytoscape_related_functions.js"></script>
 <script src="data.js"></script>
+<script src="generate_graphs.js"></script>
 <script src="index.js"></script>
 <script src="modal.js"></script>
 <script src="strings.js"></script>
