--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
 <script src="js/cytoscape_related_functions.js"></script>
 <script src="data.js"></script>
 <script src="generate_graphs.js"></script>
+<script src="js/dat.gui.js"></script>
+<script src="js/3d_force_graph_action.js"></script>    
 <script src="index.js"></script>
 <script src="modal.js"></script>
 <script src="strings.js"></script>
