--- a/index.html
+++ b/index.html
@@ -203,17 +203,17 @@
 <script src="cytoscape/jquery.cytoscape.js-edgehandles.js"></script>
 <script src="js/server.js"></script>
 <script src="js/cytoscape_related_functions.js"></script>
-<script src="data.js"></script>
+<script src="js/data.js"></script>
 <script src="generate_graphs.js"></script>
 <script src="js/dat.gui.js"></script>
 <script src="js/3d_force_graph_action.js"></script>    
 <script src="index.js"></script>
 <script src="modal.js"></script>
-<script src="strings.js"></script>
+<script src="js/strings.js"></script>
 <script src="distinctColors.js"></script>
 <script src="actions.js"></script>
 <script src="js/forVivaCirclularNode.js"></script>
-<script src="vivagraph.min.js"></script>
+<script src="js/vivagraph.min.js"></script>
 <script src="js/viva_action.js"></script>
 </body>
 </html>
