--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
         <canvas id="paperCanvas"></canvas>
     </div>
 </div>
+<div id="right_tools" style="right:0px;top:0px;position: absolute;width:60em;">
 
 <!-- The Modal -->
 <!--<div id="myModal" class="modal">-->
