--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="tooltip"><i class="fa fa-info-circle" aria-hidden="true"></i>
             <span id="tooltiptextGraphAlgorithm" class="tooltiptext">A brief description</span>
         </div>
-        <textarea name="Text22" cols="35" rows="6" id="algResults"></textarea-->
+        <textarea name="Text22" cols="35" rows="6" id="algResults"></textarea>
         <hr>
         <p id="strings-graph-actions"></p>
         <select id="graphActions"></select>
@@ -174,7 +174,7 @@
             <span id="tooltiptextGraphAction" class="tooltiptext">A brief description</span>
         </div>
 
-        <p><em>Graph ID:<span id="RUID"></span></em></p>
+        <p><em>Graph ID:<span id="RUID"></span></em></p-->
 
 
         <!--<button onclick="clearCanvas()">Clear</button>-->
