--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="tools">
     <!--<img src="icon-big.PNG" width="100px">-->
     <div style="">
-        <h3>GraphTea</h3>
+        <h3>GraphT-T</h3>
         <p id="strings-intro"></p>
         <select id="loaders" onchange="selectLoader()">
             <option>Generators</option>
