correcting some errors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="paper-full.min.js"></script>
     <script src="drawBotanical.js"></script>
     <script src="js/panda.js"></script>
-    <script src="js/3d-force-graph.min.js"></script>
+    <script src="js/3d-force-graph.js"></script>
     <title>GraphTea</title>
 </head>
 <body>
@@ -130,7 +130,7 @@
             <textarea name="TextVis" cols="35" rows="4" id="vis_inf"></textarea>
         </div>
         <hr>
-        <p id="strings-report"></p>
+        <!-- <p id="strings-report"></p>
         Category: <select id="reportCategories"></select><br/>
         Report: <select id="reports"></select>
         <div id="reportProps"></div>
@@ -143,7 +143,7 @@
             <button id="myBtn" onclick="$('#tools2').show();">View Styled</button>
             <button onclick="showOnGraph()">Show On Graph</button>
         </div>
-        <hr>
+        <hr> -->
         <p id="strings-save"></p>
         <div>
             <select id="output">
