improve the code

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <p id="strings-intro"></p>
         <select id="loaders" onchange="selectLoader()">
             <option>Generators</option>
-            <option>Edge list</option>
-            <option>From matrix</option>
+            <!-- <option>Edge list</option> -->
+            <!-- <option>From matrix</option> -->
             <option>G6 format</option>
-            <option>Freehand drawing</option>
-            <option>File</option>
+            <!-- <option>Freehand drawing</option> -->
+            <!-- <option>File</option> -->
         </select>
         <select id="graphType" onchange="selectType()">
             <option>directed</option>
@@ -150,7 +150,7 @@
             <button onclick="showOnGraph()">Show On Graph</button>
         </div>
         <hr> -->
-        <p id="strings-save"></p>
+        <!-- <p id="strings-save"></p>
         <div>
             <select id="output">
                 <option>G6 Format</option>
@@ -161,7 +161,7 @@
             </select>
             <button onclick="do_saves()">Go</button>
             <textarea name="Text2" cols="35" rows="4" id="outputResults"></textarea>
-        </div>
+        </div> -->
         <!--hr>
         <p id="strings-graph-algorithms"></p>
         <select id="graphAlgorithms"></select><br/>
